// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blacklisted syntax: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "stringify(parse(\\"function* f() { yield 1; } f();\\"), undefined, 2);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: ParseError: Yield expressions are not allowed",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`Blatant syntax error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "stringify(parse(\\"'\\"), undefined, 2);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: ParseError: SyntaxError: Unterminated string constant (1:0)",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
